<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".BlancoFragment"
    android:background="@color/md_theme_tertiaryContainer"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explicacion1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explicacion2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/explicacion3"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>
